Additional JNI removed.