@@ -46,33 +46,43 @@ import com.sun.scenario.effect.impl.sw.RendererDelegate;
 import com.sun.scenario.effect.impl.sw.java.JSWLinearConvolvePeer;
 import com.sun.scenario.effect.impl.sw.java.JSWLinearConvolveShadowPeer;
 import com.sun.scenario.effect.impl.sw.java.JSWRendererDelegate;
-import com.sun.scenario.effect.impl.sw.sse.SSELinearConvolvePeer;
-import com.sun.scenario.effect.impl.sw.sse.SSELinearConvolveShadowPeer;
 import java.lang.reflect.Constructor;
-import java.lang.reflect.Method;
+import java.nio.FloatBuffer;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.SortedSet;
+import java.util.TreeSet;
 
 /**
- * Drives the Decora software peers of one backend - the native {@code decora_sse} peers
- * ({@code com.sun.scenario.effect.impl.sw.sse}) or the pure-Java peers
- * ({@code com.sun.scenario.effect.impl.sw.java}) - directly, without Prism.
+ * Drives the pure-Java Decora software peers ({@code com.sun.scenario.effect.impl.sw.java}) directly,
+ * without Prism.
  * <p>
  * Production reaches these peers through {@code PSWRenderer}, which needs a Prism {@code Screen} or
  * {@code ResourceFactory}. This class replaces {@code PSWRenderer} with a minimal {@link Renderer}
  * that hands out plain heap images and creates peers exactly the way {@code PSWRenderer} does: the
- * {@link RendererDelegate} names the class ({@code SSE<Name>Peer} or {@code JSW<Name>Peer}) and the
+ * {@link RendererDelegate} names the class ({@code JSW<Name>Peer}) and the
  * {@code (FilterContext, Renderer, String)} constructor is invoked reflectively. Because the delegate
- * is the only thing that differs between the two backends, one JVM can hold both and feed them the
- * same inputs.
+ * names every peer class, a test can substitute a deliberately broken peer ({@link #javaWith}).
  * <p>
  * Multi-pass effects (box and Gaussian blurs and shadows) are run through the same per-pass protocol
  * {@code LinearConvolveCoreEffect.filterImageDatas} uses in production:
- * {@code validatePassInput -> getPassPeer -> setPass -> filter} for pass 0 and pass 1. Single-pass
- * generated peers are invoked with {@link RenderState#RenderSpaceRenderState}, which is what their
- * effects return from {@code getRenderState}.
+ * {@code validatePassInput -> getPassPeer -> setPass -> filter} for pass 0 and pass 1, and once pass 1
+ * has filtered the image pass 0 created, that image goes back to the pool as production's {@code unref}
+ * returns it. Single-pass generated peers are invoked with {@link RenderState#RenderSpaceRenderState},
+ * which is what their effects return from {@code getRenderState}.
  * <p>
  * Every image handed out has a scanline stride wider than its width ({@link #STRIDE_PAD}) so that a
- * stride bug in either backend shows up as a pixel difference rather than being masked.
+ * stride bug in a peer shows up as a pixel difference rather than being masked.
+ * <p>
+ * Each backend has its own renderer and {@code ImagePool}, and the renderer holds every image it creates
+ * for as long as the backend is reachable, so the pool's soft references are never cleared and garbage
+ * collection cannot change which image a pass is given. A pool image can still be larger than a fresh
+ * one once an earlier render returned it, and the peers scale texture coordinates by the physical image
+ * size, so a comparison that must not depend on the renders before it uses a fresh backend per render.
+ * A backend that renders repeatedly and {@linkplain #release releases} each result creates no image after
+ * the first renders ({@link #createdImages()}).
  */
 public final class DecoraBackend {
 
@@ -80,14 +90,14 @@ public final class DecoraBackend {
     public static final int STRIDE_PAD = 5;
 
     private final String name;
-    private final RendererDelegate delegate;
     private final DirectRenderer renderer;
     private final FilterContext fctx = new FilterContext(new Object()) {
     };
+    private final SortedSet<String> ranPeers = new TreeSet<>();
+    private final List<float[]> gaussianPassWeights = new ArrayList<>();
 
     private DecoraBackend(String name, RendererDelegate delegate) {
         this.name = name;
-        this.delegate = delegate;
         this.renderer = new DirectRenderer(delegate);
     }
 
@@ -97,128 +107,107 @@ public final class DecoraBackend {
     }
 
     /**
-     * The native backend: {@code SSERendererDelegate} (which loads {@code decora_sse}) and the
-     * {@code SSE*Peer} classes.
-     *
-     * @throws AssertionError if the library is reachable and unusable, see {@link DecoraNatives}
+     * A Java backend whose peers are named by {@code delegate} instead of {@code JSWRendererDelegate}, so a test can
+     * substitute a deliberately broken peer and prove that its comparison reports it. The delegate's class names
+     * are instantiated through their public {@code (FilterContext, Renderer, String)} constructor.
      */
-    public static DecoraBackend sse() {
-        return new DecoraBackend("SSE", DecoraNatives.requireSse());
+    static DecoraBackend javaWith(RendererDelegate delegate) {
+        return new DecoraBackend("Java (" + delegate.getClass().getName() + ")", delegate);
     }
 
     public String name() {
         return name;
     }
 
-    public AccelType accelType() {
-        return delegate.getAccelType();
-    }
-
-    /** The class name the delegate maps the given peer name to, for reporting. */
-    public String peerClassName(String peerName) {
-        return delegate.getPlatformPeerName(peerName, -1);
-    }
-
     /**
-     * The cached peer instance for a peer name and unroll count, created on first use the way
-     * {@code Renderer.getPeerInstance} does for production; lets a test call a peer's loops directly.
+     * The class names of every peer whose {@code filter} this backend has called, sorted: the classes
+     * that actually rendered, rather than the names the delegate maps peer keys to. The {@code filterHV}
+     * probes call loops directly and do not count.
      */
-    public EffectPeer<?> peer(String peerName, int unrollCount) {
-        return renderer.getPeerInstance(fctx, peerName, unrollCount);
+    public SortedSet<String> ranPeers() {
+        synchronized (ranPeers) {
+            return Collections.unmodifiableSortedSet(new TreeSet<>(ranPeers));
+        }
     }
 
-    /** The peer size {@code LinearConvolveRenderState.getPassPeer} passes as unroll count for a kernel. */
-    public static int peerSize(int kernelSize) {
-        return LinearConvolveRenderState.getPeerSize(kernelSize);
+    private void ran(EffectPeer<?> peer) {
+        synchronized (ranPeers) {
+            ranPeers.add(peer.getClass().getName());
+        }
     }
 
     /**
-     * Runs this backend's {@code filterHV} blur loop directly, with the {@code count * 2} duplicated
-     * weights the peers build for a centered pass. SSE: the package-private native loop
-     * {@code SSELinearConvolvePeer} runs for {@code HORIZONTAL_CENTERED}/{@code VERTICAL_CENTERED} passes
-     * (reached reflectively, hence {@code --add-opens ...impl.sw.sse} in {@code src/test/addExports}).
-     * Java: the protected {@code JSWLinearConvolvePeer.filterHV}, which production never reaches because
-     * {@code filter} forces {@code GENERAL_VECTOR}.
+     * The weights of every Gaussian pass a peer filtered on this backend, in render order: the
+     * {@code Math.exp}-derived kernel values {@code GaussianRenderState} handed to the peer (the weight buffer up
+     * to its limit), read after the pass. Box kernels compute their weights without {@code Math} and are not
+     * listed.
+     */
+    public List<float[]> gaussianPassWeights() {
+        synchronized (gaussianPassWeights) {
+            List<float[]> copy = new ArrayList<>();
+            for (float[] weights : gaussianPassWeights) {
+                copy.add(weights.clone());
+            }
+            return copy;
+        }
+    }
+
+    private void recordGaussianWeights(LinearConvolveRenderState state) {
+        if (!(state instanceof GaussianRenderState)) {
+            return;
+        }
+        FloatBuffer buffer = state.getPassWeights();
+        float[] weights = new float[buffer.limit()];
+        for (int i = 0; i < weights.length; i++) {
+            weights[i] = buffer.get(i);
+        }
+        synchronized (gaussianPassWeights) {
+            gaussianPassWeights.add(weights);
+        }
+    }
+
+    /**
+     * Runs the Java {@code filterHV} blur loop directly, with the {@code count * 2} duplicated weights the
+     * peers build for a centered pass: the protected {@code JSWLinearConvolvePeer.filterHV}, which that
+     * peer's {@code filter} runs for {@code HORIZONTAL_CENTERED}/{@code VERTICAL_CENTERED} passes.
      */
     public void filterHV(int[] dst, int dstcols, int dstrows, int dcolinc, int drowinc, int[] src, int srccols,
                          int srcrows, int scolinc, int srowinc, float[] weights) {
-        if (delegate instanceof JSWRendererDelegate) {
-            javaHv().hv(dst, dstcols, dstrows, dcolinc, drowinc, src, srccols, srcrows, scolinc, srowinc, weights);
-            return;
-        }
-        try {
-            sseHv().invoke(peer("LinearConvolve", peerSize(weights.length / 2)), dst, dstcols, dstrows, dcolinc,
-                    drowinc, src, srccols, srcrows, scolinc, srowinc, weights);
-        } catch (ReflectiveOperationException e) {
-            throw new IllegalStateException("SSELinearConvolvePeer.filterHV not callable", e);
-        }
+        hvProbe().hv(dst, dstcols, dstrows, dcolinc, drowinc, src, srccols, srcrows, scolinc, srowinc, weights);
     }
 
     /**
-     * Runs this backend's {@code filterHV} shadow loop directly. SSE: the private static native of
-     * {@code SSELinearConvolveShadowPeer} that takes the premultiplied shadow colour explicitly. Java: the
-     * protected {@code JSWLinearConvolveShadowPeer.filterHV}, which reads the colour from its render state,
-     * so the probe carries a Gaussian state validated for pass 1 (pass 0 of a shadow is always black).
+     * Runs the Java {@code filterHV} shadow loop directly: the protected
+     * {@code JSWLinearConvolveShadowPeer.filterHV}, which reads the colour from its render state, so the probe
+     * carries a Gaussian state validated for pass 1 (pass 0 of a shadow is always black).
      */
     public void filterHVShadow(int[] dst, int dstcols, int dstrows, int dcolinc, int drowinc, int[] src,
                                int srccols, int srcrows, int scolinc, int srowinc, float[] weights,
                                Color4f shadowColor) {
-        if (delegate instanceof JSWRendererDelegate) {
-            javaShadowHv(shadowColor).hv(dst, dstcols, dstrows, dcolinc, drowinc, src, srccols, srcrows, scolinc,
-                    srowinc, weights);
-            return;
-        }
-        try {
-            sseShadowHv().invoke(null, dst, dstcols, dstrows, dcolinc, drowinc, src, srccols, srcrows, scolinc,
-                    srowinc, weights, shadowColor.getPremultipliedRGBComponents());
-        } catch (ReflectiveOperationException e) {
-            throw new IllegalStateException("SSELinearConvolveShadowPeer.filterHV not callable", e);
-        }
+        shadowHvProbe(shadowColor).hv(dst, dstcols, dstrows, dcolinc, drowinc, src, srccols, srcrows, scolinc,
+                srowinc, weights);
     }
 
-    private HvProbe javaHvProbe;
-    private HvShadowProbe javaShadowHvProbe;
-    private Color4f javaShadowHvColor;
-    private Method sseHvMethod;
-    private Method sseShadowHvMethod;
+    private HvProbe hvProbe;
+    private HvShadowProbe shadowHvProbe;
+    private Color4f shadowHvColor;
 
-    private HvProbe javaHv() {
-        if (javaHvProbe == null) {
-            javaHvProbe = new HvProbe(fctx, renderer);
+    private HvProbe hvProbe() {
+        if (hvProbe == null) {
+            hvProbe = new HvProbe(fctx, renderer);
         }
-        return javaHvProbe;
+        return hvProbe;
     }
 
-    private HvShadowProbe javaShadowHv(Color4f shadowColor) {
-        if (javaShadowHvProbe == null || !shadowColor.equals(javaShadowHvColor)) {
+    private HvShadowProbe shadowHvProbe(Color4f shadowColor) {
+        if (shadowHvProbe == null || !shadowColor.equals(shadowHvColor)) {
             GaussianRenderState state = new GaussianRenderState(1f, 1f, 0f, true, shadowColor,
                     BaseTransform.IDENTITY_TRANSFORM);
             state.validatePassInput(data(new Image(1, 1), 0, 0), 1);
-            javaShadowHvProbe = new HvShadowProbe(fctx, renderer, state);
-            javaShadowHvColor = shadowColor;
+            shadowHvProbe = new HvShadowProbe(fctx, renderer, state);
+            shadowHvColor = shadowColor;
         }
-        return javaShadowHvProbe;
-    }
-
-    private Method sseHv() throws NoSuchMethodException {
-        if (sseHvMethod == null) {
-            Method m = SSELinearConvolvePeer.class.getDeclaredMethod("filterHV", int[].class, int.class, int.class,
-                    int.class, int.class, int[].class, int.class, int.class, int.class, int.class, float[].class);
-            m.setAccessible(true);
-            sseHvMethod = m;
-        }
-        return sseHvMethod;
-    }
-
-    private Method sseShadowHv() throws NoSuchMethodException {
-        if (sseShadowHvMethod == null) {
-            Method m = SSELinearConvolveShadowPeer.class.getDeclaredMethod("filterHV", int[].class, int.class,
-                    int.class, int.class, int.class, int[].class, int.class, int.class, int.class, int.class,
-                    float[].class, float[].class);
-            m.setAccessible(true);
-            sseShadowHvMethod = m;
-        }
-        return sseShadowHvMethod;
+        return shadowHvProbe;
     }
 
     /** Exposes the protected Java {@code filterHV} blur loop. */
@@ -254,6 +243,14 @@ public final class DecoraBackend {
     }
 
     /**
+     * Wraps an image as an {@code ImageData} with the given filter-space bounds, which may be smaller than
+     * the physical image, as they are for a pool image.
+     */
+    public ImageData data(Image image, Rectangle bounds) {
+        return new ImageData(fctx, image, new Rectangle(bounds));
+    }
+
+    /**
      * Runs a box kernel: {@code BoxBlur}/{@code BoxShadow} peers when {@code spread == 0} and the input
      * is untransformed, otherwise the {@code LinearConvolve}/{@code LinearConvolveShadow} peers - the
      * same selection {@code BoxRenderState.getPassPeer} makes in production.
@@ -268,8 +265,9 @@ public final class DecoraBackend {
     /**
      * Runs a two-pass Gaussian kernel through the {@code LinearConvolve} or {@code LinearConvolveShadow}
      * peers. With an untransformed input the passes are {@code HORIZONTAL_CENTERED} and
-     * {@code VERTICAL_CENTERED}: the SSE peer takes its {@code filterHV} loop for those, the Java peer
-     * always takes {@code filterVector}.
+     * {@code VERTICAL_CENTERED}: the peers take their {@code filterHV} loop for those, unless a clip that
+     * cuts the top or the left edge moves the result origin, which sends them to {@code filterVector}
+     * (JDK-8092042).
      */
     public Result gaussian(ImageData src, float xradius, float yradius, float spread, boolean shadow,
                            Color4f shadowColor, Rectangle clip) {
@@ -280,7 +278,7 @@ public final class DecoraBackend {
 
     /**
      * Runs a single directional Gaussian pass (the {@code MotionBlur} kernel) along {@code (dx, dy)}:
-     * a {@code GENERAL_VECTOR} pass, so both backends take their {@code filterVector} loop.
+     * a {@code GENERAL_VECTOR} pass, so the peers take their {@code filterVector} loop.
      */
     public Result motion(ImageData src, float radius, float dx, float dy, Rectangle clip) {
         GaussianRenderState state = new GaussianRenderState(radius, dx, dy, BaseTransform.IDENTITY_TRANSFORM);
@@ -298,10 +296,26 @@ public final class DecoraBackend {
             EffectPeer peer = state.getPassPeer(renderer, fctx);
             if (peer != null) {
                 peer.setPass(pass);
-                data = peer.filter(null, state, BaseTransform.IDENTITY_TRANSFORM, clip, data);
+                ran(peer);
+                ImageData output = peer.filter(null, state, BaseTransform.IDENTITY_TRANSFORM, clip, data);
+                recordGaussianWeights(state);
+                releasePassInput(data, src, output);
+                data = output;
             }
         }
         return toResult(data);
+    }
+
+    /**
+     * Returns the image of a pass input that an earlier pass created to the pool once the pass has filtered
+     * it, as {@code LinearConvolveCoreEffect.filterImageDatas} does with {@code unref}. The caller's source
+     * and the pass output keep their images.
+     */
+    private void releasePassInput(ImageData input, ImageData source, ImageData output) {
+        Filterable image = input.getUntransformedImage();
+        if (image != source.getUntransformedImage() && image != output.getUntransformedImage()) {
+            renderer.releaseCompatibleImage(image);
+        }
     }
 
     /**
@@ -315,6 +329,7 @@ public final class DecoraBackend {
     @SuppressWarnings({"rawtypes", "unchecked"})
     public Result generated(Effect effect, String peerName, Rectangle clip, ImageData... inputs) {
         EffectPeer peer = renderer.getPeerInstance(fctx, peerName, -1);
+        ran(peer);
         ImageData out = peer.filter(effect, RenderState.RenderSpaceRenderState, BaseTransform.IDENTITY_TRANSFORM,
                 clip, inputs);
         return toResult(out);
@@ -333,6 +348,11 @@ public final class DecoraBackend {
         renderer.releaseCompatibleImage(result.image());
     }
 
+    /** The number of images this backend's renderer has created for its pool so far. */
+    public int createdImages() {
+        return renderer.createdImages();
+    }
+
     private static Result toResult(ImageData data) {
         Rectangle bounds = data.getUntransformedBounds();
         HeapImage image = (HeapImage) data.getUntransformedImage();
@@ -342,18 +362,15 @@ public final class DecoraBackend {
         for (int y = 0; y < bounds.height; y++) {
             System.arraycopy(source, y * scan, pixels, y * bounds.width, bounds.width);
         }
-        return new Result(bounds.x, bounds.y, bounds.width, bounds.height, pixels, image);
+        return new Result(bounds.x, bounds.y, bounds.width, bounds.height, pixels, image, data.getTransform());
     }
 
     /**
-     * The output of one run: its bounds in filter space and its pixels compacted to
-     * {@code width * height} row-major ARGB-pre ints.
+     * The output of one run: its bounds in filter space, its pixels compacted to {@code width * height}
+     * row-major ARGB-pre ints, and the transform the result carries (production draws the pixels with it).
      */
-    public record Result(int x, int y, int width, int height, int[] pixels, HeapImage image) {
-
-        public int pixel(int col, int row) {
-            return pixels[row * width + col];
-        }
+    public record Result(int x, int y, int width, int height, int[] pixels, HeapImage image,
+                         BaseTransform transform) {
     }
 
     /** An ARGB-pre heap image with a padded stride; sources and pool images alike. */
@@ -483,11 +500,14 @@ public final class DecoraBackend {
 
     /**
      * {@code PSWRenderer} without Prism: heap images from {@link Image}, peers from the delegate's class
-     * names. Transforms are not supported - every input this harness builds is untransformed.
+     * names. The renderer's {@code transform} methods are not supported: an input carries at most a
+     * translation in its {@code ImageData}, which the software peers read without the renderer.
      */
     private static final class DirectRenderer extends Renderer {
 
         private final RendererDelegate delegate;
+        /** Strong references to every image created, so the pool's soft references are never cleared. */
+        private final List<PoolFilterable> created = new ArrayList<>();
 
         DirectRenderer(RendererDelegate delegate) {
             this.delegate = delegate;
@@ -510,7 +530,17 @@ public final class DecoraBackend {
 
         @Override
         public PoolFilterable createCompatibleImage(int w, int h) {
-            return new Image(w, h);
+            Image image = new Image(w, h);
+            synchronized (created) {
+                created.add(image);
+            }
+            return image;
+        }
+
+        int createdImages() {
+            synchronized (created) {
+                return created.size();
+            }
         }
 
         @Override
